<resources>
    <string name="app_name">Edu24</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    Facebook Login details-->
    <string name="facebook_app_id">415776683157146</string>
    <string name="fb_login_protocol_scheme">fb415776683157146</string>

    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="re_password">Re_type password</string>
    <string name="name">First Name</string>
    <string name="last_name">Last Name</string>


    <string name="et_password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="title_activity_class_room">classRoomActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_classes">Classes</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_terms">Terms &amp; Condition</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_logout">Logout</string>

    <string name="sign_up">By signing up,you accept our,</string>
    <string name="terms">Terms and Conditions</string>

    <string name="sign_in_with_google_text">Sign in with Google</string>
    <string name="sign_in_with_facebook_text">Sign in with Facebook</string>
    <string name="sign_in_with_email_text">Sign in with Email</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="share_text">Share</string>
    <string name="signup_text">SignUp</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="name_text">Name</string>
    <string name="confirmed_password_text">Confirmed Password</string>

    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="facebook">Sign in with facebook</string>
    <string name="email_btn">Sign in with email</string>
    <string name="title_activity_classroom_list">MainActivity</string>
    <string name="title_class_list">Class</string>
    <string name="title_chat">Chat</string>
    <string name="title_classwork">Classwork</string>
    <string name="title_people">People</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_message_hint">Type your message here</string>
    <string name="display_teachers">Teachers</string>
    <string name="display_students">Students</string>

    <string name="db_users">Users</string>
    <string name="db_classes">Classes</string>
    <string name="db_profile">ProfileImage</string>
    <string-array name="gender">
        <item>-- Select Gender --</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
