<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_classes" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="@string/menu_terms" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_baseline_security_24"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>
    </group>

</menu>
