<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_class_list">

	<fragment
		android:id="@+id/navigation_class_list"
		android:name="com.example.edu24.ui.classInfo.ClassInfoFragment"
		android:label="@string/title_class_list"
		tools:layout="@layout/fragment_classinfo" />

	<fragment
		android:id="@+id/navigation_chat"
		android:name="com.example.edu24.ui.chat.ChatFragment"
		android:label="@string/title_chat"
		tools:layout="@layout/fragment_chat" />

	<fragment
		android:id="@+id/navigation_classwork"
		android:name="com.example.edu24.ui.classwork.ClassworkFragment"
		android:label="@string/title_classwork"
		tools:layout="@layout/fragment_classwork" />

	<fragment
		android:id="@+id/navigation_people"
		android:name="com.example.edu24.ui.people.PeopleFragment"
		android:label="@string/title_people"
		tools:layout="@layout/fragment_people" />
</navigation>