<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:layout_marginTop="60dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">



        </LinearLayout>


        <EditText
            android:id="@+id/first_name"     
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:background="@drawable/white_bg"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:textColorHint="@color/light_gray"/>

        <EditText
            android:id="@+id/email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/white_bg"
                android:hint="@string/last_name"
                android:textColorHint="@color/black"
                android:padding="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/yellow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg"
            android:hint="@string/email"

            android:textColorHint="@color/black"
       >
        </LinearLayout>

       
        <EditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

<
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:padding="15dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/yellow"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            android:hint="@string/et_password"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="@color/light_gray" />

        <EditText
            android:id="@+id/re_type_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="30dp"
            android:background="@drawable/white_bg"
            android:hint="@string/re_type_password"
            android:padding="15dp"
            android:textColorHint="@color/light_gray"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_bg"
                android:hint="@string/re_password"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:padding="15dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/yellow"/>
        </LinearLayout>
        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="@color/red"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/white" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="Already Sign up?"/>

            <TextView
                android:id="@+id/loginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:text="Login"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>